--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="main_activity_padding">8dp</dimen>
+    <dimen name="user_itemview_padding_top">12dp</dimen>
+    <dimen name="user_itemview_padding_bottom">12dp</dimen>
+
 </resources>
