--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/add_button"
+            android:id="@+id/add_user_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add" />
