Implementação do primeiro método de teste funcional.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     >
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/users_recyclerView"
+        android:id="@+id/friends_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -32,7 +32,7 @@
             android:id="@+id/send_user_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/send_user"/>
+            android:text="@string/send"/>
 
     </LinearLayout>
 
